--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@dpark/s2-frame",
+  "name": "xxWeb-permission",
   "version": "1.1.0",
   "license": "MIT",
   "private": false,
-  "author": "框架技术研发部",
+  "author": "",
   "contributors": [
     "isaac"
   ],
-  "homepage": "http://58.210.9.133/iplatform/geekdoc/docs/wow/wow-1delpeiiudksc",
+  "homepage": "",
   "bugs": {
-    "url": "http://issues.dpark.com.cn/git/issues/s2",
-    "email": "xuhg@dpark.com.cn"
+    "url": "",
+    "email": ""
   },
-  "description": "前端开发平台",
+  "description": "isaac",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
