--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.15.8",
     "rollup-plugin-less": "^1.1.3",
+    "screenfull": "4.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
