--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -7,8 +7,7 @@
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "private": false,
   "author": "isaac",
   "contributors": [
@@ -18,6 +17,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.15.8",
+    "path-to-regexp": "2.4.0",
     "rollup-plugin-less": "^1.1.3",
     "screenfull": "4.2.0",
     "vue": "^2.6.11"
