--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -29,10 +29,13 @@
     "postcss-url": "^10.1.3",
     "rollup": "^2.44.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-esbuild": "^4.9.1",
+    "rollup-plugin-jsx": "^1.0.3",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-url": "^3.0.1",
     "rollup-plugin-vue": "^5.1.9",
+    "rollup-plugin-vue-jsx-compat": "^0.0.6",
     "vue-template-compiler": "^2.6.12"
   }
 }
