--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,10 +1,9 @@
 {
   "name": "xxWeb-box",
-  "version": "1.0.1",
+  "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,34 +17,9 @@
     "axios": "^0.18.0",
     "element-ui": "^2.15.8",
     "path-to-regexp": "2.4.0",
-    "rollup-plugin-less": "^1.1.3",
     "screenfull": "4.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.18.2",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "cssnano": "^5.1.10",
-    "esbuild": "^0.14.44",
-    "postcss": "^8.2.9",
-    "postcss-pxtorem": "^6.0.0",
-    "postcss-url": "^10.1.3",
-    "rollup": "^2.44.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-esbuild": "^4.9.1",
-    "rollup-plugin-jsx": "^1.0.3",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-url": "^3.0.1",
-    "rollup-plugin-vue": "^5.1.9",
-    "rollup-plugin-vue-jsx-compat": "^0.0.6",
-    "vue-template-compiler": "^2.6.12"
   }
 }
