--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.0.2",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "xxWeb-box": "^0.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
