--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xxWeb-box",
-  "version": "0.0.0",
-  "description": "",
+  "name": "xxweb-box",
+  "version": "0.0.1",
+  "description": "开箱即用的盒子",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +12,7 @@
   "contributors": [
     "isaac"
   ],
+  "files": ["assets","components","mixin","utils","index.js","package.json","README.md"],
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
