--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
     "vuex": "^4.0.2",
-    "element-ui": "^2.15.8"
+    "element-ui": "^2.15.8",
+    "nprogress": "^0.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
