--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "vue-router": "^3.5.4",
     "vuex": "^4.0.2",
     "element-ui": "^2.15.8",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "axios": "^0.18.0",
+    "path-to-regexp": "2.4.0",
+    "screenfull": "4.2.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
