--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
     "analyz": "set npm_config_report=true && npm run build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.5.4",
-    "vuex": "^4.0.2",
-    "element-ui": "^2.15.8",
-    "nprogress": "^0.2.0",
+    "ant-design-vue": "1.7.8",
     "axios": "^0.18.0",
+    "core-js": "^3.6.5",
+    "element-ui": "^2.15.8",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "nprogress": "^0.2.0",
     "path-to-regexp": "2.4.0",
     "screenfull": "4.2.0",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@dpark/logfv-web-vue": "1.0.25",
+    "@types/crypto-js": "4.1.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -41,6 +44,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "moment": "2.29.1",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^4.5.0"
   },
