--- a/src/packages/xxWeb-utils/package.json
+++ b/src/packages/xxWeb-utils/package.json
@@ -15,7 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "vue": "^2.6.11",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "@types/crypto-js": "4.1.1",
+    "moment": "2.29.1",
+    "@dpark/logfv-web-vue": "1.0.25",
+    "ant-design-vue": "^1.7.8"
   },
   "devDependencies": {
   }
