--- a/src/packages/xxWeb-utils/package.json
+++ b/src/packages/xxWeb-utils/package.json
@@ -18,8 +18,7 @@
     "nprogress": "^0.2.0",
     "@types/crypto-js": "4.1.1",
     "moment": "2.29.1",
-    "@dpark/logfv-web-vue": "1.0.25",
-    "ant-design-vue": "^1.7.8"
+    "@dpark/logfv-web-vue": "1.0.25"
   },
   "devDependencies": {
   }
