--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "s2-xxweb-box",
+  "name": "@dpark/s2-xxweb-box",
   "version": "0.0.1",
-  "description": "开箱即用的盒子",
+  "description": "开箱即用的web页面盒",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
