--- a/src/packages/xxWeb-utils/package.json
+++ b/src/packages/xxWeb-utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "s2-xxweb-utils",
+  "name": "@dpark/s2-xxweb-utils",
   "version": "0.0.1",
-  "description": "工具库",
+  "description": "xxweb工具库",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +16,7 @@
   "dependencies": {
     "vue": "^2.6.11",
     "nprogress": "^0.2.0",
-    "@types/crypto-js": "4.1.1",
+    "crypto-js": "^4.1.1",
     "moment": "2.29.1"
   },
   "devDependencies": {
