--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xxWeb-permission",
+  "name": "xxWeb",
   "version": "1.1.0",
   "license": "MIT",
   "private": false,
@@ -21,7 +21,6 @@
     "analyz": "set npm_config_report=true && npm run build"
   },
   "dependencies": {
-    "@dpark/icon": "^1.0.22",
     "axios": "^0.18.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
