--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xxweb-box",
   "version": "0.0.5",
-  "description": "开箱即用的web页面盒",
+  "description": "开箱即用的web页面百宝箱",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
