--- a/src/packages/xxWeb-utils/package.json
+++ b/src/packages/xxWeb-utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dpark/s2-xxweb-utils",
-  "version": "0.0.8",
+  "name": "xxweb-utils",
+  "version": "0.0.6",
   "description": "xxweb工具库",
   "main": "index.js",
   "scripts": {
