--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
+    "darkreader": "^4.9.58",
     "element-ui": "^2.15.8",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
