--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 registry = "https://registry.npm.taobao.org"
-@dpark:registry="http://dev.dpark.com.cn/npm"
-//dev.dpark.com.cn/:_authToken="4S2fB10p9FldOxtUE4Niiw=="
-//dev.dpark.com.cn/:always-auth=true
-//dev.dpark.com.cn/:email = xhgainxq@qq.com
+@dpark:registry="http://npm.dpark.com.cn/npm"
+//npm.dpark.com.cn/:_authToken="PfUT/eUqprSHqWSfoS/Suw=="
+//npm.dpark.com.cn/:always-auth=true
+//npm.dpark.com.cn/:email = xhgainxq@qq.com
