--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -15,14 +15,16 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "darkreader": "^4.9.58",
     "element-ui": "^2.15.8",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "path-to-regexp": "^2.4.0",
     "screenfull": "^4.2.0",
     "vue": "^2.6.11",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
+    "babel-plugin-component": "^1.1.1"
   }
 }
