--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "nprogress": "^0.2.0",
-    "path-to-regexp": "2.4.0",
+    "path-to-regexp": "^6.2.1",
     "screenfull": "4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
