--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "crypto-js": "^4.1.1",
     "darkreader": "^4.9.58",
     "element-ui": "^2.15.8",
+    "highlight.js": "^11.7.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "nprogress": "^0.2.0",
