--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "highlight.js": "^11.7.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-container": "^3.0.0",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "screenfull": "4.2.0",
