--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "analyz": "set npm_config_report=true && npm run build"
   },
   "dependencies": {
+    "apexcharts": "^3.36.3",
     "axios": "^0.18.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "darkreader": "^4.9.58",
-    "echarts": "^5.4.1",
     "element-ui": "^2.15.8",
     "highlight.js": "^11.7.0",
     "less": "^3.11.1",
