--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^2.15.8",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.21",
     "path-to-regexp": "^6.2.1",
     "resize-detector": "^0.1.9",
     "screenfull": "^4.2.0",
