--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -25,6 +25,7 @@
     "resize-detector": "^0.1.9",
     "screenfull": "^4.2.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuedraggable": "^2.24.3"
   }
 }
