UI列表拖拽排序、显隐、重命名、删除功能实现

--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -25,7 +25,6 @@
     "resize-detector": "^0.1.9",
     "screenfull": "^4.2.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.2",
-    "vuedraggable": "^2.24.3"
+    "vue-router": "^3.0.2"
   }
 }
