--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "analyz": "set npm_config_report=true && npm run build"
   },
   "dependencies": {
+    "@scena/guides": "^0.20.4",
+    "@tweenjs/tween.js": "^17.4.0",
     "apexcharts": "^3.36.3",
     "axios": "^0.18.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "darkreader": "^4.9.58",
+    "echarts": "^4.5.0",
+    "echarts-liquidfill": "^2.0.4",
     "element-ui": "^2.15.8",
     "highlight.js": "^11.7.0",
     "less": "^3.11.1",
@@ -34,8 +38,10 @@
     "markdown-it-container": "^3.0.0",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
+    "resize-detector": "^0.1.9",
     "screenfull": "4.2.0",
     "vue": "^2.6.11",
+    "vue-echarts": "^4.0.1",
     "vue-router": "^3.5.4",
     "vuex": "^4.0.2"
   },
