--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "darkreader": "^4.9.58",
     "echarts": "^4.5.0",
     "echarts-liquidfill": "^2.0.4",
-    "element-ui": "2.15.8",
+    "element-ui": "^2.15.8",
     "highlight.js": "^11.7.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
