--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -14,6 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@handsontable/vue": "^12.3.1",
     "@scena/guides": "^0.20.4",
     "axios": "^0.18.0",
     "darkreader": "^4.9.58",
