--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue": "^2.6.11",
     "vue-echarts": "^4.0.1",
     "vue-router": "^3.5.4",
+    "vue-codemirror": "^4.0.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
