--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "resize-detector": "^0.1.9",
     "screenfull": "4.2.0",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-echarts": "^4.0.1",
     "vue-router": "^3.5.4",
-    "vue-codemirror": "^4.0.6",
+    "vuedraggable": "^2.24.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
