--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -28,6 +28,7 @@
     "screenfull": "^4.2.0",
     "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuedraggable": "^2.24.3"
   }
 }
