--- a/src/packages/xxWeb-box/.npmrc
+++ b/src/packages/xxWeb-box/.npmrc
@@ -1,4 +1,4 @@
-registry = "https://npm.dpark.com.cn/npm/"
-//npm.dpark.com.cn/npm/:_authToken="6cDMkQtr484VQDQIIO8LYw=="
-//npm.dpark.com.cn/npm/:always-auth=true
-//npm.dpark.com.cn/npm/:email = xhgainxq@qq.com
+registry = "http://192.168.34.162:4873"
+//192.168.34.162:4873/:_authToken="qM6PlXoiJ40pSjwDPKPDIg=="
+//192.168.34.162:4873/:always-auth=true
+//192.168.34.162:4873/:email = xhgainxq@qq.com
