--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/s2-xxweb-box",
-  "version": "0.0.19",
+  "version": "0.0.19.001-alpha",
   "description": "可复用的web常用页面",
   "main": "index.js",
   "scripts": {
