--- a/src/packages/xxWeb-utils/package.json
+++ b/src/packages/xxWeb-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/s2-xxweb-utils",
-  "version": "0.0.12",
+  "version": "0.0.13.001-alpha",
   "description": "xxweb工具库",
   "main": "index.js",
   "scripts": {
