--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xxWeb",
+  "name": "xxweb",
   "version": "1.1.0",
   "license": "MIT",
   "private": false,
@@ -21,23 +21,17 @@
     "analyz": "set npm_config_report=true && npm run build"
   },
   "dependencies": {
-    "@handsontable/vue": "^12.3.1",
-    "@scena/guides": "^0.20.4",
-    "@tweenjs/tween.js": "^17.4.0",
-    "apexcharts": "^3.36.3",
     "axios": "^0.18.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "darkreader": "^4.9.58",
-    "echarts": "^4.5.0",
-    "echarts-liquidfill": "^2.0.4",
+    "apexcharts": "^3.36.3",
+    "markdown-it": "^13.0.1",
+    "markdown-it-container": "^3.0.0",
     "element-ui": "^2.15.8",
-    "handsontable": "^12.3.1",
     "highlight.js": "^11.7.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-container": "^3.0.0",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "resize-detector": "^0.1.9",
