--- a/src/packages/xxWeb-box/.npmrc
+++ b/src/packages/xxWeb-box/.npmrc
@@ -1,4 +1,1 @@
-registry = "http://192.168.34.162:4873"
-//192.168.34.162:4873/:_authToken="qM6PlXoiJ40pSjwDPKPDIg=="
-//192.168.34.162:4873/:always-auth=true
-//192.168.34.162:4873/:email = xhgainxq@qq.com
+registry = "https://registry.npm.taobao.org"
