--- a/src/packages/xxWeb-utils/.npmrc
+++ b/src/packages/xxWeb-utils/.npmrc
@@ -1,4 +1,1 @@
-registry = "https://npm.dpark.com.cn/npm/"
-//npm.dpark.com.cn/npm/:_authToken="6cDMkQtr484VQDQIIO8LYw=="
-//npm.dpark.com.cn/npm/:always-auth=true
-//npm.dpark.com.cn/npm/:email = xhgainxq@qq.com
+registry = "https://registry.npm.taobao.org"
