--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xxweb-box",
-  "version": "0.0.12.001-alpha",
+  "version": "0.0.13",
   "description": "可复用的web常用页面",
   "main": "index.js",
   "scripts": {
