--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xxweb-box",
   "version": "0.0.13",
-  "description": "可复用的web常用页面",
+  "description": "可复用的前端页面",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +25,9 @@
     "screenfull": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.0.2",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "nprogress": "^0.2.0",
+    "crypto-js": "^4.1.1",
+    "moment": "2.29.1"
   }
 }
