--- a/package.json
+++ b/package.json
@@ -1,81 +1,35 @@
 {
-  "name": "xxweb",
-  "version": "1.1.0",
-  "license": "MIT",
-  "private": false,
-  "author": "",
-  "contributors": [
-    "isaac"
-  ],
-  "homepage": "",
-  "bugs": {
-    "url": "",
-    "email": ""
-  },
-  "description": "isaac",
+  "name": "xxweb-box",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "serve:proxy": "vue-cli-service serve --mode proxy",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "analyz": "set npm_config_report=true && npm run build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "core-js": "^3.6.5",
-    "crypto-js": "^4.1.1",
-    "darkreader": "^4.9.58",
     "apexcharts": "^3.36.3",
-    "markdown-it": "^13.0.1",
-    "markdown-it-container": "^3.0.0",
-    "element-ui": "^2.15.8",
-    "highlight.js": "^11.7.0",
+    "axios": "^0.18.0",
+    "darkreader": "^4.9.58",
+    "element-plus": "^2.4.4",
+    "handsontable": "^12.3.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
-    "nprogress": "^0.2.0",
+    "lodash": "^4.17.21",
     "path-to-regexp": "^6.2.1",
     "resize-detector": "^0.1.9",
-    "screenfull": "4.2.0",
-    "vue": "^2.6.11",
+    "screenfull": "^4.2.0",
+    "vue": "^3.0.0",
     "vue-codemirror": "^4.0.6",
-    "vue-echarts": "^4.0.1",
-    "vue-router": "^3.5.4",
+    "vue-json-pretty": "1.9.3",
+    "vue-router": "^4.0.8",
     "vuedraggable": "^2.24.3",
-    "vuex": "^4.0.2"
+    "tiny-emitter": "^2.1.0",
+    "core-js": "^3.8.3"
   },
   "devDependencies": {
-    "@types/crypto-js": "4.1.1",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-component": "^1.1.1",
-    "copy-webpack-plugin": "^6.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "moment": "2.29.1",
-    "vue-template-compiler": "^2.6.11",
-    "webpack-bundle-analyzer": "^4.5.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@vitejs/plugin-vue": "^4.5.2",
+    "vite": "^5.0.8"
+  }
 }
