--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xxweb-box",
-  "version": "0.0.14",
-  "description": "可复用的前端页面",
+  "version": "0.3.0",
+  "description": "可复用的前端页面-vue3版",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,15 +16,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "darkreader": "^4.9.58",
-    "element-ui": "^2.15.8",
+    "element-plus": "^2.4.4",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.21",
     "path-to-regexp": "^6.2.1",
     "resize-detector": "^0.1.9",
     "screenfull": "^4.2.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.0.2",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.8",
     "vuedraggable": "^2.24.3",
     "nprogress": "^0.2.0",
     "crypto-js": "^4.1.1",
