--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
 
-VUE_APP_baseApi = 'http://58.210.9.133/iplatform/gateway/admin'
-VUE_APP_ssoApi = 'http://58.210.9.133/iplatform/gateway/auth/sso-auth'
+VITE_APP_baseApi = 'http://58.210.9.133/iplatform/gateway/admin'
+VITE_APP_ssoApi = 'http://58.210.9.133/iplatform/gateway/auth/sso-auth'
