--- a/.env.proxy
+++ b/.env.proxy
@@ -1,4 +1,4 @@
 NODE_ENV=proxy
 
-VUE_APP_baseApi = 'http://192.168.126.25/iplatform/gateway/admin'
-VUE_APP_ssoApi = 'http://192.168.126.25/iplatform/gateway/auth/sso-auth'
+VITE_APP_baseApi = 'http://192.168.126.25/iplatform/gateway/admin'
+VITE_APP_ssoApi = 'http://192.168.126.25/iplatform/gateway/auth/sso-auth'
