--- a/package.json
+++ b/package.json
@@ -11,22 +11,25 @@
   "dependencies": {
     "apexcharts": "^3.36.3",
     "axios": "^0.18.0",
+    "core-js": "^3.8.3",
     "darkreader": "^4.9.58",
     "element-plus": "^2.4.4",
     "handsontable": "^12.3.1",
+    "highlight.js": "^11.9.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
+    "markdown-it-container": "^3.0.0",
     "path-to-regexp": "^6.2.1",
     "resize-detector": "^0.1.9",
     "screenfull": "^4.2.0",
+    "tiny-emitter": "^2.1.0",
     "vue": "^3.0.0",
     "vue-codemirror": "^4.0.6",
     "vue-json-pretty": "1.9.3",
     "vue-router": "^4.0.8",
-    "vuedraggable": "^2.24.3",
-    "tiny-emitter": "^2.1.0",
-    "core-js": "^3.8.3"
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
