--- a/package.json
+++ b/package.json
@@ -2,22 +2,21 @@
   "name": "xxweb-box",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "apexcharts": "^3.36.3",
-    "axios": "^0.18.0",
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "darkreader": "^4.9.58",
     "element-plus": "^2.4.4",
     "handsontable": "^12.3.1",
     "highlight.js": "^11.9.0",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "markdown-it-container": "^3.0.0",
@@ -33,6 +32,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
-    "vite": "^5.0.8"
+    "less-loader": "^5.0.0",
+    "vite": "^5.0.12",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
