--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "apexcharts": "^3.36.3",
     "axios": "^1.6.7",
