--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ yarn-error.log*
 *.sw*
 *.tgz
 public/project.js
+project.js
 yarn-error.log
 src/packages/xxWeb-box/yarn.lock
 src/packages/xxWeb-utils/yarn.lock
