--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -15,19 +15,20 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
-    "darkreader": "^4.9.58",
+    "crypto-js": "^4.1.1",
     "element-plus": "^2.4.4",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "lodash": "^4.17.21",
+    "moment": "2.29.1",
+    "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "resize-detector": "^0.1.9",
-    "screenfull": "^4.2.0",
+    "screenfull": "^6.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8",
-    "vuedraggable": "^2.24.3",
-    "nprogress": "^0.2.0",
-    "crypto-js": "^4.1.1",
-    "moment": "2.29.1"
+    "vuedraggable": "^2.24.3"
+  },
+  "devDependencies": {
+    "less-loader": "^5.0.0"
   }
 }
