--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "less-loader": "^5.0.0",
     "vite": "^5.0.12",
+    "vite-copy-plugin": "^0.4.0",
     "vite-plugin-compression": "^0.5.1"
   }
 }
