--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,8 +1,9 @@
 {
   "name": "xxweb-box",
-  "version": "0.3.4",
+  "version": "0.3.3",
   "description": "可复用的前端页面-vue3版",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,10 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
-    "crypto-js": "^4.1.1",
     "element-plus": "^2.4.4",
     "less": "^3.11.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "2.29.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
