--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -22,20 +23,19 @@
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "markdown-it-container": "^3.0.0",
-    "path-to-regexp": "^6.2.1",
     "resize-detector": "^0.1.9",
-    "screenfull": "^6.0.2",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.0.0",
     "vue-codemirror": "^4.0.6",
     "vue-json-pretty": "1.9.3",
     "vue-router": "^4.0.8",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "xxweb-box": "file:src/packages/xxWeb-box/xxweb-box-0.3.5.tgz"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "less-loader": "^5.0.0",
-    "vite": "^5.0.12",
+    "vite": "^6.3.4",
     "vite-copy-plugin": "^0.4.0",
     "vite-plugin-compression": "^0.5.1"
   }
