--- a/src/packages/xxWeb-util/package.json
+++ b/src/packages/xxWeb-util/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xxweb-util",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "xxweb函数工具包",
   "type": "module",
   "files": [
     "lib"
   ],
-  "devDependencies": {
+  "dependencies": {
     "axios": "^1.9.0",
     "lodash-es": "^4.17.21",
     "dayjs": "^1.11.3"
