--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,24 +1,30 @@
 {
   "name": "xxweb-box",
-  "version": "0.0.16",
-  "description": "可复用的前端页面",
+  "version": "0.0.17",
+  "description": "前端页面空壳",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "private": false,
   "author": "isaac",
   "contributors": [
     "isaac"
   ],
+  "scripts": {
+    "webpack": "webpack"
+  },
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "element-ui": "^2.15.8",
     "path-to-regexp": "^6.2.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.2",
+    "vue-router": "^3.0.2"
+  },
+  "devDependencies": {
+    "css-loader": "^3.0.0",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.11.0",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8"
   }
 }
