--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-router": "^3.5.4",
     "vuedraggable": "^2.24.3",
     "vuex": "^4.0.2",
+    "xxweb-box": "0.0.17",
     "xxweb-util": "^0.3.2"
   },
   "devDependencies": {
