--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "postcss-loader": "^6",
     "postcss-pxtorem": "5.1.1",
     "vue-template-compiler": "^2.7.16",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "unplugin-icons": "0.13.4",
+    "@iconify/json": "^2.2.308"
   },
   "eslintConfig": {
     "root": true,
