--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "vue-codemirror": "^4.0.6",
     "vue-json-pretty": "1.9.3",
     "vue-router": "^4.0.8",
-    "vuedraggable": "^2.24.3",
-    "xxweb-box": "file:src/packages/xxWeb-box/xxweb-box-0.3.5.tgz"
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
