--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -1,11 +1,10 @@
 {
   "name": "xxweb-box",
   "version": "0.3.7",
-  "description": "封装了一些前端常用页面和函数",
+  "description": "前端页面空壳",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "vite build"
+    "webpack": "webpack"
   },
   "keywords": [],
   "private": false,
@@ -13,5 +12,19 @@
   "contributors": [
     "isaac"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "element-plus": "^2.4.4",
+    "path-to-regexp": "^6.2.1",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.8"
+  },
+  "devDependencies": {
+    "css-loader": "^3.0.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.11.0",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8"
+  }
 }
