--- a/src/packages/xxWeb-box/package.json
+++ b/src/packages/xxWeb-box/package.json
@@ -14,6 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.4.4",
     "path-to-regexp": "^6.2.1",
     "vue": "^3.0.0",
