--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "vuedraggable": "^2.24.3",
     "vuex": "^4.0.2",
     "xxweb-box": "0.0.17",
-    "xxweb-util": "0.3.6"
+    "xxweb-util": "^0.3.10"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.308",
     "@types/crypto-js": "4.1.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -62,10 +63,9 @@
     "postcss": "^8.5.3",
     "postcss-loader": "^6",
     "postcss-pxtorem": "5.1.1",
-    "vue-template-compiler": "^2.7.16",
-    "webpack-bundle-analyzer": "^4.5.0",
     "unplugin-icons": "0.13.4",
-    "@iconify/json": "^2.2.308"
+    "vue-template-compiler": "^2.7.16",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
